GH-66: gzip compression in DCS. The test does not pass but I think it's because of the test infrastructure -- will check later.